# DL_TCPGateway

./: .dockerignore  .gitmodules  CMakeLists.txt  CloudGateway.cpp  CloudGateway.h  ConfigParam.cpp  ConfigParam.h  DeviceConnection.cpp  DeviceConnection.h  Dockerfile  KafkaProducer.cpp  KafkaProducer.h  README.md  main.cpp  start_local.sh
lib/: CMakeLists.txt
lib/logging/: .clang-format-ignore  CMakeLists.txt  README.md
lib/logging/include/Logging/: LogManager.h  Logger.h  ServiceLogManager.h
lib/logging/src/: LogManager.cpp  Logger.cpp  ServiceLogManager.cpp
lib/networking/: .clang-format-ignore  .gitignore  CMakeLists.txt  LICENSE  README.md
lib/networking/include/Networking/: ConnectionObserver.h  MongooseConnection.h  TCPClient.h  TCPServer.h  TCPServerTemplate.h  Utils.h
lib/networking/src/: ConnectionObserver.cpp  MongooseConnection.cpp  TCPClient.cpp  TCPServer.cpp  Utils.cpp
